--- a/.env.example
+++ b/.env.example
@@ -12,11 +12,14 @@
 # Prisma
 # https://www.prisma.io/docs/reference/database-reference/connection-urls#env
 DATABASE_URL="file:./db.sqlite"
-<<<<<<< HEAD
-=======
 
+ # Next Auth
+ # You can generate a new secret on the command line with:
+ # openssl rand -base64 32
+ # https://next-auth.js.org/configuration/options#secret
+ # NEXTAUTH_SECRET=""
+ NEXTAUTH_URL="http://localhost:3000"
 
-#clerk
-NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_cG9zc2libGUtcGlnbGV0LTc2LmNsZXJrLmFjY291bnRzLmRldiQ
-CLERK_SECRET_KEY=sk_test_6zbxo272C3PUvYwGw8Wlu9k5RBCVUXp9zcbJDlINxI
->>>>>>> 0bf5d1bed829e826190ee0df6807aa773eca1f52
+ # Next Auth Discord Provider
+ DISCORD_CLIENT_ID=""
+ DISCORD_CLIENT_SECRET=""
