--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "chirper",
+  "name": "chirp",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -11,8 +11,6 @@
     "start": "next start"
   },
   "dependencies": {
-    "@clerk/nextjs": "^4.25.1",
-    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.1.1",
     "@t3-oss/env-nextjs": "^0.6.0",
     "@tanstack/react-query": "^4.32.6",
@@ -21,7 +19,6 @@
     "@trpc/react-query": "^10.37.1",
     "@trpc/server": "^10.37.1",
     "next": "^13.4.19",
-    "next-auth": "^4.23.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "superjson": "^1.13.1",
